(#258) Corrige o exec de Runtime que está sendo descontinuado